# Exercise-3D-Scanning-Motion-Capture-IN2354-

./: .gitignore
Exercise-0/: CMakeLists.txt  constants.h  main.cpp  util.h
Exercise-0/Submission/: output.txt
Exercise-0/lib/: algo.cpp  algo.h
Exercise-1/: CMakeLists.txt  main.cpp
Exercise-1/Submisson/: main.cpp
Exercise-2/: CMakeLists.txt  ImplicitSurface.h  main.cpp
Exercise-2/Submission/: MarchingCubes.h  hoppe.off  torus.off
Exercise-3/: CMakeLists.txt  ProcrustesAligner.h  main.cpp
Exercise-3/Submission/: bunny_procrustes.off
Exercise-4/: CMakeLists.txt  plot_dragon.py  plot_gaussian.py  plot_surface.py  surface.cpp
Exercise-4/Submission/: dragon.cpp  gaussian.cpp  output_dragon.txt  output_gaussian.txt  output_surface.txt
Exercise-5/: PointCloud.h  main.cpp
Exercise-5/Submission/: ICPOptimizer.h  bunny_icp.off
